kustomize/internal/elk-stack/elk/elasticsearch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-es-direct-access
spec:
  type: LoadBalancer
  loadBalancerIP: 10.20.0.52
  ports:
  - name: https
    port: 9200
    protocol: TCP
    targetPort: 9200
  selector:
    common.k8s.elastic.co/type: elasticsearch
    elasticsearch.k8s.elastic.co/cluster-name: main
