kustomize/internal/elk-stack/elk/elasticsearch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: es-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: elasticsearch.malumn.local
    http:
      paths:
      - backend:
          service:
            name: main-es-http
            port:
              number: 9200
        path: /
        pathType: Prefix
